ui/scss/init/_gui.scss
/* ... */
.transactionsPage-wrapper {
  .card__header--between {
    .card__title-section {
      width: 100%;
      div {
        width: 100%;
        .card__title {
          width: 100%;
          .txo__table_header {
            width: auto !important;
          }
        }
      }
    }
  }
}

.topPage-wrapper {
  .claim-preview__wrapper--channel {
    .claim__menu-button {
      right: var(--spacing-xxs) !important;
    }
  }
}

.playlistPage-wrapper {
  .claim-preview--collection-mine {
    height: unset;
    padding-left: 9rem;
    position: relative;

    @media (max-width: $breakpoint-small) {
      padding-left: 6.5rem;
    }

    .media__thumb {
      position: relative;
      right: unset;

      .claim-preview__hover-actions {
        display: visible;
      }
    }

    .claim-preview__text {
      position: unset;
      right: unset;
      width: 100%;
      background-color: unset;
      padding: 0;
      border-radius: unset;

      .claim-preview-info {
        .claim-preview__title {
          font-size: var(--font-small);
        }
      }
      .media__subtitle {
        .button__content {
          .channel-name {
            font-size: var(--font-xsmall);
          }
        }
        .date_time {
          font-size: var(--font-xxsmall);
        }
      }
    }
  }
}

// Remove tap focus on mobile devices
input,
textarea,
button,
select,
a {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

*:focus-visible:not(.modal):not(.card):not(.wunderbar__input):not(.menu__list):not(.menu__list--header):not(.button--secondary):not(.button-like):not(.button-dislike):not(select):not(input):not(textarea):not(video) {
  background-color: rgba(var(--color-primary-dynamic), 0.2) !important;
  color: var(--color-text) !important;
  // outline: 2px solid var(--color-primary);
  box-shadow: 0px 0px 0px 2px var(--color-primary) inset;

  .icon {
    stroke: var(--color-text) !important;
  }
}

select:focus-visible,
input:focus-visible:not(.wunderbar__input),
textarea:focus-visible {
  box-shadow: 0px 0px 0px 2px var(--color-primary) inset;
}

